Bug 697065: Fix bug in CMYK -> RGB pixmap converter.

When caching the cmyk values used to generate a given
rgb value, it is best to cache the values before processing.